SBVTestSuite/TestSuite/CompileTests/PCase/PCase04.stderr
PCase04.hs:13:14: error: [GHC-39584]
    " pCase: Unknown constructor: FooBar

        Cannot find this constructor in scope.
        Make sure the type is declared and mkSymbolic is called.

    " In the quasi-quotation:
        [pCase| e of
        FooBar _ -> undefined
      |]
   |
13 | t e = [pCase| e of
   |              ^^^^^...

